--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,25 +39,25 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.core:core:1.1.0'
-    implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'androidx.preference:preference:1.1.0'
+    implementation "androidx.multidex:multidex:2.0.1"
+    implementation "androidx.core:core:1.1.0"
+    implementation "androidx.annotation:annotation:1.1.0"
+    implementation "androidx.preference:preference:1.1.0"
 
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 
     // UI
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+    implementation "androidx.core:core-ktx:1.3.1"
+    implementation "androidx.appcompat:appcompat:1.1.0"
+    implementation "com.google.android.material:material:1.2.1"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.0.0"
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation "androidx.preference:preference-ktx:1.1.1"
-    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 
 
     // DB
@@ -67,20 +67,19 @@ dependencies {
 
     // Network
     implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    implementation "com.squareup.okhttp3:logging-interceptor:3.8.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation('com.squareup.retrofit2:converter-gson:2.4.0') {
-        transitive = true
-        exclude module: 'gson'
-    }
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
 
     // Image
-    implementation 'jp.wasabeef:glide-transformations:4.0.1'
+    implementation "jp.wasabeef:glide-transformations:4.0.1"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 
     // Utils
-    implementation 'joda-time:joda-time:2.9.9'
+    implementation "joda-time:joda-time:2.9.9"
+    implementation "com.google.code.gson:gson:2.8.9"
 
     // DI
     implementation "org.koin:koin-core:2.1.3"
