--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,10 +82,12 @@ dependencies {
     implementation "com.google.code.gson:gson:2.8.9"
 
     // DI
-    implementation "org.koin:koin-core:2.1.3"
-    implementation "org.koin:koin-android:2.1.3"
-    implementation "org.koin:koin-androidx-scope:2.1.3"
-    implementation "org.koin:koin-androidx-fragment:2.1.1"
+    implementation "org.koin:koin-core:$koin_version"
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-androidx-fragment:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    testImplementation "org.koin:koin-test:$koin_version"
 
     // Test
     androidTestImplementation 'androidx.test.ext:junit:1.1.0' // 추가 : junit:junit 대체
