--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext {
         kotlin_version = '1.3.50'
         koin_version = '2.1.3'
+        room_version = '2.1.0'
         android_support_version = '30.0.0'
         glideVersion = '4.7.1'
         okhttpVersion = '3.6.0'
