--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         koin_version = '2.1.3'
         room_version = '2.1.0'
         android_support_version = '30.0.0'
+        lifecycle_version = '2.2.0'
         glideVersion = '4.7.1'
         okhttpVersion = '3.6.0'
         retrofitVersion = '2.6.0'
